force-app/main/default/objects/Account_Plan__c.object
<CustomObject>
    <label>經營計劃</label>
    <nameField>
        <displayFormat>AP-{000000}</displayFormat>
        <label>Account Plan No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>客戶</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Annual_Plan_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Type__c</fullName>
        <label>本次申請案件類型</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Case_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collateral__c</fullName>
        <label>他行金交額度是否有擔保品</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesOrNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_ID__c</fullName>
        <formula>Account__r.Customer_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>公司統編</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Type__c</fullName>
        <label>授信類型</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Credit_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OBU_Company__c</fullName>
        <label>公司為OBU</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesOrNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <label>公司全名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Type__c</fullName>
        <label>公司型態</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Company_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Emp_No__c</fullName>
        <label>公司人數</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Export_Percent__c</fullName>
        <label>外銷比例%</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Export_Receipt__c</fullName>
        <label>外銷收款方式</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Export_Receipt</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salary_Account__c</fullName>
        <label>本行薪轉戶</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesOrNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>審批狀態</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted</fullName>
                    <default>true</default>
                    <label>尚未審核</label>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                    <label>審核中</label>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                    <label>退回</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                    <label>已審核</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Domestic_Receipt__c</fullName>
        <label>內銷收款方式</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Domestic_Receipt</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bank_Prof_Investor__c</fullName>
        <label>是否有本行專業投資人資格</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesOrNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outsourcing_Payment__c</fullName>
        <label>外購付款方式</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Outsourcing_Payment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outsourcing_Percent__c</fullName>
        <label>外購比例%</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Other_Bank_Factoring__c</fullName>
        <label>他行曾/已承作應收帳款融資</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesOrNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Bank_PSR_Limit__c</fullName>
        <label>他行是否有金交額度</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesOrNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transaction_Currency__c</fullName>
        <label>交易幣別</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Transaction_Currency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bank_Cash_Convert_TWD__c</fullName>
        <label>本行現金折台幣 (元)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ship_60Days_Known_Mfrs__c</fullName>
        <label>出貨給國內外知名廠商且天期&gt;60天</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesOrNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_Annual_Review_Month__c</fullName>
        <formula>Account__r.Next_Review_Month__c</formula>
        <label>下次應辦理年審月份</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Bank_Prof_Investor__c</fullName>
        <label>是否有他行專業投資人資格</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesOrNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Buyer_Credit_Card_Payment__c</fullName>
        <label>需提供買家信用卡支付功能</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesOrNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Prod_Sales_Model__c</fullName>
        <label>客戶產銷模式</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Customer_Prod_Sales_Model</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Yr_Fin_Report_Revenue__c</fullName>
        <label>公司近一年完整年度財報營收 (億元)</label>
        <precision>16</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Bank_Cash_Convert_TWD__c</fullName>
        <label>他行現金折台幣 (元)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Retail_Clerks_Deposit_Needs__c</fullName>
        <label>有門市店員或外務營收現金存款需求(例：物流業者)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesOrNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ship_To_Sales_Target_SC_Fin__c</fullName>
        <label>出貨給本行配合供應鏈融資專案的銷貨對象 (特力屋、喬山等)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesOrNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Recipients_AAC_Need_DPC__c</fullName>
        <label>收款對象眾多且有自動銷帳或多元化收款通路需求</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesOrNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Target_is_a_Natural_Person__c</fullName>
        <label>銷售對象為自然人且非預付性質且非第三方支付公司</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesOrNo</valueSetName>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>